# echo-softphone

./: .env.example  README.md  electron-builder.json5  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
docs/: INTEGRACAO_NATIVA.md
electron/: main.ts  preload.ts  store.ts
electron/ipc/: sip.ipc.ts  store.ipc.ts  window.ipc.ts
electron/windows/: mainWindow.ts
native/: CMakeLists.txt  binding.gyp  package-lock.json  package.json
native/src/: audio_device.cpp  audio_device.h  event_emitter.cpp  event_emitter.h  pjsip_addon.cpp  sip_engine.cpp  sip_engine.h
scripts/: build-pjsip-windows.ps1  check-native.cjs  rebuild-native.cjs  setup-pjsip.cjs
src/app/: routes.tsx
src/components/caller/: AnswerButton.tsx  EstablishedState.tsx  HangupButton.tsx  IdleState.tsx  IncomingCallOverlay.tsx  IncomingState.tsx  OutgoingState.tsx
src/components/chamadas/: BotaoAtender.tsx  BotaoDesligar.tsx  BotaoDiscarChamada.tsx  EstadoEntrante.tsx  EstadoEstabelecido.tsx  EstadoOcioso.tsx  EstadoSaindo.tsx  OverlayChamadaEntrante.tsx  TecladoChamada.tsx
src/components/contacts/: AddContactModal.tsx  ModalAdicionarContato.tsx
src/components/historico/: LinhaHistoricoChamadas.tsx  MenuContexto.tsx  TabelaHistoricoChamadas.tsx
src/components/history/: CallHistoryRow.tsx  CallHistoryTable.tsx  ContextMenu.tsx
src/components/ui/: Avatar.tsx  BarraSuperior.tsx  BotaoAcao.tsx  DialButton.tsx  DialInput.tsx  DialPad.tsx  EntradaDiscagem.tsx  ScrollableTable.tsx  Seletor.tsx  TecladoDiscagem.tsx  TopBar.tsx
src/pages/: Caller.tsx  Chat.tsx  Contatos.tsx  Discador.tsx  Entrar.tsx  Historico.tsx  Login.tsx
src/pages/Caller/: index.tsx
src/pages/Home/: index.tsx
src/services/: contactService.ts  historyService.ts  servicoArmazenamento.ts  servicoContatos.ts  servicoHistorico.ts
src/sip/: types.ts
src/sip/config/: sipConfigStore.ts
src/sip/core/: customSessionDescriptionHandler.ts  index.ts  sessionGuards.ts  sipClient.ts  sipClientFactory.ts  sipClientInterface.ts
src/sip/media/: dtmf.ts
src/sip/native/: index.ts  nativeSipClient.ts
src/sip/react/: RequireRegistered.tsx  SipProvider.tsx  useCallAudioFeedback.ts  useCallHistory.ts
src/styles/: index.css
